<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="0dp"
    android:background="@drawable/brent_norris_4aam6kdituu_unsplash">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="413dp"
        android:layout_height="50dp"
        tools:ignore="MissingConstraints">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_money"
            app:title="@string/app_name" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/topCardBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:cardBackgroundColor="#77D970"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/jumlah_hutang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/jumlah_utang"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="32dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/jumlah_hutang_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:inputType="numberDecimal"
                    tools:ignore="TextContrastCheck,TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/estimasi_question"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/estimasi_hutang"
                app:layout_constraintStart_toStartOf="@id/jumlah_hutang"
                app:layout_constraintTop_toBottomOf="@id/jumlah_hutang" />

            <RadioGroup
                android:id="@+id/hutang_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="@id/option_harian"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="@id/estimasi_question"
                app:layout_constraintTop_toBottomOf="@id/estimasi_question">


                <RadioButton
                    android:id="@+id/option_harian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/harian_service"
                    android:textColor="#DD2C00"
                    tools:ignore="TextContrastCheck" />


                <RadioButton
                    android:id="@+id/option_bulanan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bulanan_service"
                    tools:ignore="TextContrastCheck">


                </RadioButton>

            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/jumlah_hari_hutang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/jumlah_hari_utang"
                app:counterEnabled="true"
                app:counterMaxLength="3"
                app:layout_constraintStart_toStartOf="@id/hutang_options"
                app:layout_constraintTop_toBottomOf="@id/hutang_options"
                tools:layout_editor_absoluteX="32dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/jumlah_hari_hutang_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:inputType="numberDecimal"
                    tools:ignore="TextContrastCheck,TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/ajukan_hutang"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/ajukan_calculate"
                android:textColor="#CCFF90"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/jumlah_hari_hutang"
                app:layout_constraintTop_toBottomOf="@id/jumlah_hari_hutang"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/hutang_result"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textSize="35sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ajukan_hutang"
                tools:text="$10" />

            <TextView
                android:id="@+id/hari_result"
                style="@style/Widget.fauzi.TextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                app:layout_constraintTop_toBottomOf="@+id/hutang_result"
                tools:ignore="TextContrastCheck"
                tools:layout_editor_absoluteX="-2dp"
                tools:text="Jumlah Hari: 2 Bulan" />

            <TextView
                android:id="@+id/bunga_result"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="9dp"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                app:layout_constraintTop_toBottomOf="@+id/hari_result"
                tools:ignore="TextContrastCheck"
                tools:layout_editor_absoluteX="-8dp"
                tools:text="Jumlah Bunga: 2000" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bunga_result"
                app:srcCompat="@drawable/pngegg"
                android:contentDescription="@string/todo" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>